tests/compile_fail/try_catch_message_lifetime.stderr
error[E0597]: `scope3` does not live long enough
  --> $DIR/try_catch_message_lifetime.rs:15:43
   |
13 |   let _message = {
   |       -------- borrow later stored here
14 |     let mut scope3 = v8::HandleScope::new(&mut scope2);
15 |     let mut scope4 = v8::HandleScope::new(&mut scope3);
   |                                           ^^^^^^^^^^^ borrowed value does not live long enough
16 |     try_catch.message(&mut scope4).unwrap()
17 |   };
   |   - `scope3` dropped here while still borrowed
